--- a/Project1/DrawBackground/app/src/main/res/layout/activity_draw_white_background.xml
+++ b/Project1/DrawBackground/app/src/main/res/layout/activity_draw_white_background.xml
@@ -73,6 +73,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:gravity="center"
         android:id="@+id/rl_drawing"
         android:background="#fffdfd"
         android:layout_marginTop="10dp"
