upload complete bookmark option

--- a/Project2_ReadBook/app/src/main/res/layout/activity_description.xml
+++ b/Project2_ReadBook/app/src/main/res/layout/activity_description.xml
@@ -51,6 +51,7 @@
         app:layout_constraintHorizontal_bias="0.0" />
 
     <ImageView
+        android:padding="5dp"
         android:id="@+id/ivBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -61,6 +62,7 @@
         app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
 
     <ImageView
+        android:padding="5dp"
         android:id="@+id/ivBookmark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
