--- a/IceNote/app/src/main/res/layout/item_list_note.xml
+++ b/IceNote/app/src/main/res/layout/item_list_note.xml
@@ -17,12 +17,14 @@
         android:layout_marginTop="5dp">
 
         <TextView
+            android:textColor="#000000"
             android:id="@+id/txtTitle"
             android:gravity="center_vertical"
             android:layout_weight="2"
             android:paddingLeft="10dp"
             android:textStyle="bold"
             android:text="Title"
+            android:textSize="16sp"
             android:layout_width="match_parent"
             android:layout_height="0dp" />
 
