--- a/Project3/app/src/main/res/drawable/custom_gradient2.xml
+++ b/Project3/app/src/main/res/drawable/custom_gradient2.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#ffffff"
-        android:endColor="#c8000000"
-        android:angle="-90"/>
+    <gradient android:startColor="#00ffffff"
+        android:endColor="#6c000000"
+        android:angle="90"/>
 </shape>
