--- a/Project3/app/src/main/res/layout/activity_main.xml
+++ b/Project3/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rl_main"
     tools:context="com.example.haihoang.freemusic.activity.MainActivity"
     android:background="@color/colorBackground">
 
@@ -13,6 +14,7 @@
         android:id="@+id/tab_layout"/>
 
     <android.support.v4.view.ViewPager
+        android:background="#f9f3f3"
         android:layout_below="@+id/tab_layout"
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
