--- a/Project3/app/src/main/res/layout/item_list_must_type.xml
+++ b/Project3/app/src/main/res/layout/item_list_must_type.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:layout_margin="2dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="170dp"
     android:background="#476bdf">
     
     <ImageView
+        android:scaleType="centerCrop"
         android:id="@+id/iv_music_type"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
