--- a/Project3/app/src/main/res/values/colors.xml
+++ b/Project3/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorBackground">#d6931dd7</color>
+    <color name="colorBackground">#9d26e2</color>
 </resources>
