--- a/Project3/app/src/main/res/layout/activity_main.xml
+++ b/Project3/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,96 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rl_main"
     tools:context="com.example.haihoang.freemusic.activity.MainActivity"
     android:background="@color/colorBackground">
-
-    <android.support.design.widget.TabLayout
+    <LinearLayout
+        android:visibility="gone"
+        android:background="#b439fc"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:id="@+id/rl_mini"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tab_layout"/>
+        android:layout_height="wrap_content">
+        <SeekBar
+            android:thumb="@null"
+            android:layout_alignParentTop="true"
+            android:id="@+id/sb_mini"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <android.support.v4.view.ViewPager
-        android:background="#f9f3f3"
-        android:layout_below="@+id/tab_layout"
-        android:id="@+id/view_pager"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="8dp"
+                android:id="@+id/iv_song"/>
+
+            <TextView
+                android:layout_toLeftOf="@+id/btn_play_pause"
+                android:layout_marginEnd="10dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="#fff"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_alignTop="@+id/iv_song"
+                android:layout_toRightOf="@id/iv_song"
+                android:id="@+id/tv_song"
+                android:text="Song"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_toStartOf="@+id/btn_play_pause"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:layout_marginEnd="10dp"
+                android:id="@+id/tv_singer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_song"
+                android:layout_toEndOf="@+id/iv_song"
+                android:text="Singer"
+                android:textColor="#78ffffff"
+                android:textStyle="bold" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fabSize="mini"
+                android:id="@+id/btn_play_pause"
+                android:src="@drawable/ic_play_arrow_black_24dp"
+                android:layout_marginRight="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"/>
+
+
+        </RelativeLayout>
+    </LinearLayout>
+
+
+
+    <RelativeLayout
+        android:id="@+id/rl_main"
+        android:layout_above="@+id/rl_mini"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tab_layout"/>
+
+        <android.support.v4.view.ViewPager
+            android:background="#f9f3f3"
+            android:layout_below="@+id/tab_layout"
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </RelativeLayout>
+
+
 </RelativeLayout>
