--- a/Project3/app/src/main/res/layout/fragment_main_player.xml
+++ b/Project3/app/src/main/res/layout/fragment_main_player.xml
@@ -1,144 +1,126 @@
-<RelativeLayout android:layout_width="match_parent"
-    android:background="@color/colorBackground"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="@color/colorBackground"
+    android:clickable="true"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:background="@drawable/custom_gradient2"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical">
 
         <ImageView
-            android:src="@drawable/ic_arrow_back_black_24dp"
+            android:id="@+id/iv_close"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
+
+        <ImageView
+            android:id="@+id/iv_download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:padding="16dp"
+            app:srcCompat="@drawable/ic_file_download_black_24dp" />
 
         <LinearLayout
-            android:weightSum="10"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_margin="@dimen/text_margin"
+            android:layout_toLeftOf="@id/iv_download"
+            android:layout_toRightOf="@id/iv_close"
+            android:orientation="vertical">
 
-            <RelativeLayout
-                android:layout_marginLeft="10dp"
-                android:layout_weight="8.5"
-                android:layout_width="0dp"
-                android:layout_height="match_parent">
-                <TextView
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:layout_marginTop="5dp"
-                    android:textColor="#fff"
-                    android:text="Song Name"
-                    android:textStyle="bold"
-                    android:textSize="18sp"
-                    android:id="@+id/tv_song"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+            <TextView
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:id="@+id/tv_song_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Song"
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:layout_below="@+id/tv_song"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textColor="#d6ffffff"
-                    android:text="Singer"
-                    android:textSize="15sp"
-                    android:id="@+id/tv_singer"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </RelativeLayout>
-
-            <ImageView
-                android:layout_weight="1.5"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_file_download_black_24dp"
-                android:layout_toRightOf="@+id/tv_song"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tv_singer_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Singer"
+                android:textColor="#bebbbb"
+                android:textSize="16sp" />
         </LinearLayout>
+    </RelativeLayout>
 
-    </android.support.v7.widget.Toolbar>
+    <ImageView
+        android:id="@+id/iv_song"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="40dp"
+        android:scaleType="centerCrop" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/iv_song">
+
+        <TextView
+            android:id="@+id/tv_duration_time_song"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/text_margin"
+            android:textColor="#fff" />
+
+        <TextView
+            android:id="@+id/tv_current_time_song"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/text_margin"
+            android:textColor="#fff" />
+
+        <SeekBar
+            android:id="@+id/sb_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/tv_duration_time_song"
+            android:layout_toRightOf="@id/tv_current_time_song"/>
+
+    </RelativeLayout>
 
     <LinearLayout
-        android:orientation="vertical"
-        android:weightSum="8"
-        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <ImageView
-            android:scaleType="center"
-            android:src="@raw/genre_x2_2"
-            android:layout_weight="5"
-            android:layout_width="match_parent"
-            android:layout_height="0dp" />
+            android:id="@+id/iv_pre"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:srcCompat="@drawable/ic_skip_previous_black_24dp" />
 
-        <LinearLayout
-            android:weightSum="10"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp">
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fb_play"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_margin="64dp"
+            app:srcCompat="@drawable/ic_play_arrow_black_24dp" />
 
-            <TextView
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="#fff"
-                android:text="02:09"
-                android:layout_weight="1.5"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-
-            <SeekBar
-                android:progress="70"
-                android:layout_gravity="center"
-                android:layout_weight="7"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="#fff"
-                android:text="03:09"
-                android:layout_weight="1.5"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:paddingBottom="25dp"
-            android:weightSum="10"
-            android:orientation="horizontal"
-            android:layout_weight="2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp">
-
-            <ImageView
-                android:padding="20dp"
-                android:src="@drawable/ic_skip_previous_black_24dp"
-                android:layout_weight="3"
-                android:layout_width="0dp"
-                android:layout_height="match_parent" />
-
-            <ImageView
-                android:padding="10dp"
-                android:src="@drawable/ic_play_arrow_black_24dp"
-                android:layout_weight="4"
-                android:layout_width="0dp"
-                android:layout_height="match_parent" />
-
-            <ImageView
-                android:padding="20dp"
-                android:src="@drawable/ic_skip_next_black_24dp"
-                android:layout_weight="3"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"/>
-
-        </LinearLayout>
+        <ImageView
+            android:id="@+id/iv_next"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:srcCompat="@drawable/ic_skip_next_black_24dp" />
 
     </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
