--- a/Project3/app/src/main/res/layout/notification_layout.xml
+++ b/Project3/app/src/main/res/layout/notification_layout.xml
@@ -2,27 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:id="@+id/rl_main_player"
-    tools:context="com.example.haihoang.freemusic.activity.MainActivity"
     android:background="@color/colorBackground">
-    <LinearLayout
-        android:visibility="gone"
-        android:background="#b439fc"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        android:id="@+id/rl_mini"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <SeekBar
-            android:thumb="@null"
-            android:layout_alignParentTop="true"
-            android:id="@+id/sb_mini"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <RelativeLayout
+            android:background="#b439fc"
+            android:id="@+id/rl_mini"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -61,40 +47,14 @@
                 android:textColor="#78ffffff"
                 android:textStyle="bold" />
 
-            <android.support.design.widget.FloatingActionButton
+            <ImageView
+                android:padding="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:fabSize="mini"
                 android:id="@+id/btn_play_pause"
-                android:src="@drawable/ic_play_arrow_black_24dp"
                 android:layout_marginRight="20dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"/>
 
-
         </RelativeLayout>
-    </LinearLayout>
-
-
-
-    <RelativeLayout
-        android:id="@+id/rl_main"
-        android:layout_above="@+id/rl_mini"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <android.support.design.widget.TabLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tab_layout"/>
-
-        <android.support.v4.view.ViewPager
-            android:background="#f9f3f3"
-            android:layout_below="@+id/tab_layout"
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </RelativeLayout>
-
-
 </RelativeLayout>
